k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socks5-proxy
  namespace: proxy-socks5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socks5-proxy
  template:
    metadata:
      labels:
        app: socks5-proxy
    spec:
      containers:
        - name: socks5-proxy
          image: phenya28/socks5-proxy:1.0.1
          ports:
            - containerPort: 1080
